# gflick

./: .gitignore  README.md  asyncserver.py  config.nims  db.py  gflick.nimble  google.py  pyproject.toml  script.js  server.py  style.css
caddy/: gflick  gflick.caddy
nginx/: gflick-acme-only.conf  gflick.conf
src/: gflick.nim
src/gflick/: __init__.py  db.py  google.py  http_client.py  server.py
systemd/: gflick.service
