[tool.poetry]
name = "gflick"
version = "0.1.0"
description = ""
authors = ["Bùi Thành Nhân <hi@imnhan.com>"]
license = "MIT"

[tool.poetry.scripts]
gflick = "gflick:prod"
gflick-dev = "gflick:dev"
gflick-google = "gflick:google"

[tool.poetry.dependencies]
python = "^3.7"
bottle = "^0.12.18"
requests = "^2.23.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
