[tool.poetry]
name = "gflick"
version = "0.1.2"
description = ""
authors = ["Bùi Thành Nhân <hi@imnhan.com>"]
license = "MIT"

[tool.poetry.scripts]
gflick = "gflick:prod"
gflick-dev = "gflick:dev"
gflick-google = "gflick:google"

[tool.poetry.dependencies]
python = "^3.6"
starlette = "^0.13.4"
uvicorn = "^0.11.5"
httpx = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
